# LLM_Module

./: README.md
src/ik_solver_pkg/: CMakeLists.txt  package.xml
src/ik_solver_pkg/ik_solver_pkg/: backend_segmentation.py  grasp_modular_notes.md  master.py  ur10_subtasks.json
src/ik_solver_pkg/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ik_solver_pkg/install/ik_solver_pkg/share/ik_solver_pkg/: package.bash  package.zsh
src/ik_solver_pkg/src/: CMakeCache.txt  CTestConfiguration.ini  ik_solver_node copy.cpp  ik_solver_node.cpp  ik_solver_node_orig.cpp  rosidl_adapter__arguments__ik_solver_pkg.json
src/ik_solver_pkg/src/ament_cmake_core/stamps/: SetTargetPose.srv.stamp
src/ik_solver_pkg/src/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/ik_solver_pkg/srv/: SetTargetPose.srv
