<?xml version="1.0"?>
<package format="3">
  <name>ik_solver_pkg</name>
  <version>0.0.1</version>
  <description>IK solver node using PyKDL</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>geometry_msgs</depend> -->
  <depend>trajectory_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rosidl_typesupport_c</build_depend>
  <exec_depend>rosidl_typesupport_c</exec_depend>
  <build_depend>rosidl_generator_py</build_depend>
  <exec_depend>rosidl_generator_py</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

